# acm-hackathon-project-backend

./: .env  .gitignore  Procfile  README.md  build.sh  main.py  pyproject.toml  requirements.txt
analytics/: admin.py  models.py  serializers.py  urls.py  views.py  wizkid_analysis_results.pkl
analytics/migrations/: 0001_initial.py  0002_csvupload_royaltystatement_upload.py
core/: settings.py  urls.py
intelligence/: admin.py  models.py  services.py  urls.py  views.py
intelligence/migrations/: 0001_initial.py
user/: models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_customuser_country.py  0003_alter_customuser_avatar_url.py
